# poetry_exercise

./: LICENSE  README.md
poetry_exercise/: README.md  pyproject.toml
poetry_exercise/src/: main.py
poetry_exercise/tests/: test_unit.py
