[tool.poetry]
name = "poetry-exercise"
version = "0.1.0"
description = ""
authors = ["giulia <csbnex24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
